<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/loginTextFieldLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="62dp"
        android:paddingBottom="16dp"
        app:labelText="@string/login_label_login"
        app:panelBackgroundColor="@color/colorSurfBackgroundLighter"
        app:singleLine="true">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/loginTextFieldLoginExtended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/loginTextFieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:labelText="@string/login_label_password"
        app:panelBackgroundColor="@color/colorSurfBackgroundLighter"
        app:singleLine="true">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/loginTextFieldPasswordExtended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:paddingBottom="24dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"

                android:background="@drawable/login_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onLoginButtonClicked"
                android:text="@string/login_button"
                android:textColor="@color/colorSurfBackground"/>

            <ProgressBar
                android:id="@+id/loginProgressBar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:theme="@style/SurfTheme.DarkAccent"
                android:background="@drawable/login_button"
                android:visibility="invisible" />

        </FrameLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>